<resources>
    <string name="app_name">Hotel</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_catalog">Каталог</string>
    <string name="menu_directory">Справочник</string>
    <string name="menu_address">Адреса</string>
    <string name="menu_authorization">Войти</string>
    <string name="menu_setting">Настройки</string>
</resources>